loans/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loans-deployment
  labels:
    app: loans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loans
  template:
    metadata:
      labels:
        app: loans
    spec:
      containers:
      - name: loans
        image: baicham/securedbank-loans-api:s18
        ports:
        - containerPort: 8093
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
