loans/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: loans
spec:
  selector:
    app: loans
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8093
      targetPort: 8093
